# omronplusplus

./: .appveyor.yml  .travis.yml  AndroidAppSettings.cfg  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  config.h_cmake_in  configure.ac  omron++.nsi
.github/workflows/: ci.yml
data/: net.christianbeier.Omronplusplus.desktop
debian/: changelog  control  copyright  menu  rules  watch
flatpak/: net.christianbeier.Omronplusplus.yml
releases/: mklinux  mkosx  mksrc  mkwin32
src/: Makefile  Makefile.am  Makefile.mac  Makefile.mgw  NEWS  README  TODO  cfg.c  cfg.h  config.c  config.h  input.c  input.h  ki.c  ki.h  lexwrite.c  lexwrite.h  main.c  menu.c  menu.h  omron++.desktop  omron++.icns  omron++.rc  omron++_32.xpm  omronplusplus.desktop  sound.c  sound.h  util.c  util.h  video.c  video.h
src/msw/: SDL.lib  SDL_gfx.lib  SDLmain.lib
